--- a/public/css/my.css
+++ b/public/css/my.css
@@ -54,4 +54,14 @@ a:hover{
 	clear:both;
 }
 
+.starrr {
+	display: inline-block; }
+	.starrr a {
+	  font-size: 16px;
+	  padding: 0 1px;
+	  cursor: pointer;
+	  color: #FFD119;
+	  text-decoration: none; 
+}
+  
 
